# src/libs/Replicate/Generated/Replicate.Models.ModelsCreateResponse.g.cs
@@ -1,0 +1,142 @@
+
+#nullable enable
+
+namespace Replicate
+{
+    /// <summary>
+    /// 
+    /// </summary>
+    public sealed partial class ModelsCreateResponse
+    {
+        /// <summary>
+        /// 
+        /// </summary>
+        [global::System.Text.Json.Serialization.JsonPropertyName("url")]
+        public string? Url { get; set; }
+
+        /// <summary>
+        /// 
+        /// </summary>
+        [global::System.Text.Json.Serialization.JsonPropertyName("owner")]
+        public string? Owner { get; set; }
+
+        /// <summary>
+        /// 
+        /// </summary>
+        [global::System.Text.Json.Serialization.JsonPropertyName("name")]
+        public string? Name { get; set; }
+
+        /// <summary>
+        /// 
+        /// </summary>
+        [global::System.Text.Json.Serialization.JsonPropertyName("description")]
+        public string? Description { get; set; }
+
+        /// <summary>
+        /// 
+        /// </summary>
+        [global::System.Text.Json.Serialization.JsonPropertyName("visibility")]
+        public string? Visibility { get; set; }
+
+        /// <summary>
+        /// 
+        /// </summary>
+        [global::System.Text.Json.Serialization.JsonPropertyName("github_url")]
+        public object? GithubUrl { get; set; }
+
+        /// <summary>
+        /// 
+        /// </summary>
+        [global::System.Text.Json.Serialization.JsonPropertyName("paper_url")]
+        public object? PaperUrl { get; set; }
+
+        /// <summary>
+        /// 
+        /// </summary>
+        [global::System.Text.Json.Serialization.JsonPropertyName("license_url")]
+        public object? LicenseUrl { get; set; }
+
+        /// <summary>
+        /// 
+        /// </summary>
+        [global::System.Text.Json.Serialization.JsonPropertyName("run_count")]
+        public double? RunCount { get; set; }
+
+        /// <summary>
+        /// 
+        /// </summary>
+        [global::System.Text.Json.Serialization.JsonPropertyName("cover_image_url")]
+        public object? CoverImageUrl { get; set; }
+
+        /// <summary>
+        /// 
+        /// </summary>
+        [global::System.Text.Json.Serialization.JsonPropertyName("default_example")]
+        public object? DefaultExample { get; set; }
+
+        /// <summary>
+        /// 
+        /// </summary>
+        [global::System.Text.Json.Serialization.JsonPropertyName("latest_version")]
+        public object? LatestVersion { get; set; }
+
+        /// <summary>
+        /// Additional properties that are not explicitly defined in the schema
+        /// </summary>
+        [global::System.Text.Json.Serialization.JsonExtensionData]
+        public global::System.Collections.Generic.IDictionary<string, object> AdditionalProperties { get; set; } = new global::System.Collections.Generic.Dictionary<string, object>();
+
+        /// <summary>
+        /// Initializes a new instance of the <see cref="ModelsCreateResponse" /> class.
+        /// </summary>
+        /// <param name="url"></param>
+        /// <param name="owner"></param>
+        /// <param name="name"></param>
+        /// <param name="description"></param>
+        /// <param name="visibility"></param>
+        /// <param name="githubUrl"></param>
+        /// <param name="paperUrl"></param>
+        /// <param name="licenseUrl"></param>
+        /// <param name="runCount"></param>
+        /// <param name="coverImageUrl"></param>
+        /// <param name="defaultExample"></param>
+        /// <param name="latestVersion"></param>
+#if NET7_0_OR_GREATER
+        [global::System.Diagnostics.CodeAnalysis.SetsRequiredMembers]
+#endif
+        public ModelsCreateResponse(
+            string? url,
+            string? owner,
+            string? name,
+            string? description,
+            string? visibility,
+            object? githubUrl,
+            object? paperUrl,
+            object? licenseUrl,
+            double? runCount,
+            object? coverImageUrl,
+            object? defaultExample,
+            object? latestVersion)
+        {
+            this.Url = url;
+            this.Owner = owner;
+            this.Name = name;
+            this.Description = description;
+            this.Visibility = visibility;
+            this.GithubUrl = githubUrl;
+            this.PaperUrl = paperUrl;
+            this.LicenseUrl = licenseUrl;
+            this.RunCount = runCount;
+            this.CoverImageUrl = coverImageUrl;
+            this.DefaultExample = defaultExample;
+            this.LatestVersion = latestVersion;
+        }
+
+        /// <summary>
+        /// Initializes a new instance of the <see cref="ModelsCreateResponse" /> class.
+        /// </summary>
+        public ModelsCreateResponse()
+        {
+        }
+    }
+}
